--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "package-sync",
   "version": "1.0.0",
   "description": "Helps to keep packages in sync inside your team",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "test"
+  },
+  "bin": {
+    "package-sync": "./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/AndreasCag/package-sync/issues"
   },
-  "homepage": "https://github.com/AndreasCag/package-sync#readme"
+  "homepage": "https://github.com/AndreasCag/package-sync#readme",
+  "dependencies": {
+    "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  }
 }
