--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "package-sync",
   "version": "1.0.0",
   "description": "Helps to keep packages in sync inside your team",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "test",
-    "update": "node ./src/index.js --update",
-    "check": "node ./src/index.js --check",
-    "install-on-invalid": "node ./src/index.js --install-on-invalid"
+    "compile": "tsc",
+    "upd": "node ./dist/cli/index.js --update",
+    "check": "node ./dist/cli/index.js --check",
+    "soft-check": "node ./dist/cli/index.js --soft-check",
+    "inst": "node ./dist/cli/index.js --install"
   },
   "bin": {
-    "package-sync": "./src/index.js"
+    "package-sync": "./dist/cli/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,12 +31,14 @@
   },
   "homepage": "https://github.com/AndreasCag/package-sync#readme",
   "dependencies": {
+    "@types/minimist": "^1.2.0",
     "minimist": "^1.2.0",
-    "lodash": "^4.0.0"
+    "lodash": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "@types/node": "^11.11.4",
+    "tslint": "^5.14.0",
+    "tslint-microsoft-contrib": "^6.1.0",
+    "typescript": "^3.3.4000"
   }
 }
