--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "homepage": "https://github.com/AndreasCag/package-sync#readme",
   "dependencies": {
     "@types/minimist": "^1.2.0",
-    "minimist": "^1.2.0",
-    "lodash": "^3.0.0"
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^11.11.4",
